--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Redwrap simplifies Reddit API requests by providing an easy to use wrapper with jQuery style chaining.",
   "main": "redwrap.js",
   "dependencies": {
-    "request": "~2.12.0"
+    "request": "^2.88.0"
   },
   "devDependencies": {
-    "mocha":  "~1.4.1",
+    "mocha": "~1.4.1",
     "chai": "~1.2.0",
     "sinon": "~1.4.2"
   },
